--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -156,7 +156,7 @@ button,
 html input[type=button],
 input[type=reset],
 input[type=submit] {
-    appearance: button;
+    -webkit-appearance: button;
     cursor: pointer
 }
 
@@ -183,8 +183,8 @@ input[type=radio] {
     padding: 0
 }
 
-input[type=number]::inner-spin-button,
-input[type=number]::outer-spin-button {
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
     height: auto
 }
 
@@ -192,12 +192,12 @@ input[type=search] {
     box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    appearance: textfield
+    -webkit-appearance: textfield
 }
 
-input[type=search]::search-cancel-button,
-input[type=search]::search-decoration {
-    appearance: none
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration {
+    -webkit-appearance: none
 }
 
 fieldset {
@@ -1418,7 +1418,7 @@ a:hover {
 
 a:focus {
     outline: thin dotted;
-    outline: 5px auto focus-ring-color;
+    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px
 }
 
@@ -3124,7 +3124,7 @@ input[type=file]:focus,
 input[type=checkbox]:focus,
 input[type=radio]:focus {
     outline: thin dotted;
-    outline: 5px auto focus-ring-color;
+    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px
 }
 
@@ -3192,10 +3192,10 @@ textarea.form-control {
 }
 
 input[type=search] {
-    appearance: none
+    -webkit-appearance: none
 }
 
-@media screen and (min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio:0) {
     input[type=date].form-control,
     input[type=time].form-control,
     input[type=datetime-local].form-control,
@@ -3682,7 +3682,7 @@ textarea.input-lg {
 .btn:active:focus,
 .btn:focus {
     outline: thin dotted;
-    outline: 5px auto focus-ring-color;
+    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px
 }
 
@@ -4314,12 +4314,12 @@ tbody.collapse.in {
     text-align: left;
     list-style: none;
     background-color: #fff;
-    background-clip: padding-box;
+		background-clip: padding-box;
     background-clip: padding-box;
     border: 1px solid #ccc;
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: 4px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+		box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
 }
 
@@ -7055,7 +7055,7 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
-    appearance: none;
+    -webkit-appearance: none;
     padding: 0;
     cursor: pointer;
     background: 0 0;
@@ -7080,7 +7080,7 @@ button.close {
 }
 
 .modal.fade .modal-dialog {
-    transition: transform .3s ease-out;
+    -webkit-transition: -webkit-transform .3s ease-out;
     -o-transition: -o-transform .3s ease-out;
     transition: transform .3s ease-out;
     transform: translate(0, -25%);
@@ -7511,9 +7511,9 @@ button.close {
 }
 
 @media all and (transform-3d),
-(transform-3d) {
+(-webkit-transform-3d) {
     .carousel-inner>.item {
-        transition: transform .6s ease-in-out;
+        -webkit-transition: -webkit-transform .6s ease-in-out;
         -o-transition: -o-transform .6s ease-in-out;
         transition: transform .6s ease-in-out;
         backface-visibility: hidden;
@@ -7595,9 +7595,9 @@ button.close {
 }
 
 .carousel-control.left {
-    background-image: linear-gradient(left, rgba(0, 0, 0, .5) 0, rgba(0, 0, 0, .0001) 100%);
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .5) 0, rgba(0, 0, 0, .0001) 100%);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, .5) 0, rgba(0, 0, 0, .0001) 100%);
-    background-image: gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
     background-image: linear-gradient(to right, rgba(0, 0, 0, .5) 0, rgba(0, 0, 0, .0001) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
     background-repeat: repeat-x
@@ -7606,9 +7606,9 @@ button.close {
 .carousel-control.right {
     right: 0;
     left: auto;
-    background-image: linear-gradient(left, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
-    background-image: gradient(linear, left top, right top, from(rgba(0, 0, 0, .0001)), to(rgba(0, 0, 0, .5)));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .0001)), to(rgba(0, 0, 0, .5)));
     background-image: linear-gradient(to right, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
     background-repeat: repeat-x
