--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,7 +9,7 @@
 html {
     font-family: sans-serif;
     text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%
+    text-size-adjust: 100%
 }
 
 body {
@@ -117,7 +117,7 @@ figure {
 hr {
     height: 0;
     box-sizing: content-box;
-    -moz-box-sizing: content-box;
+    box-sizing: content-box;
     box-sizing: content-box
 }
 
@@ -156,7 +156,6 @@ button,
 html input[type=button],
 input[type=reset],
 input[type=submit] {
-    -webkit-appearance: button;
     cursor: pointer
 }
 
@@ -165,8 +164,8 @@ html input[disabled] {
     cursor: default
 }
 
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+button::focus-inner,
+input::focus-inner {
     padding: 0;
     border: 0
 }
@@ -178,27 +177,27 @@ input {
 input[type=checkbox],
 input[type=radio] {
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     box-sizing: border-box;
     padding: 0
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type=number]::inner-spin-button,
+input[type=number]::outer-spin-button {
     height: auto
 }
 
 input[type=search] {
     box-sizing: content-box;
-    -moz-box-sizing: content-box;
     box-sizing: content-box;
-    -webkit-appearance: textfield
+    box-sizing: content-box;
+    appearance: textfield
 }
 
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-    -webkit-appearance: none
-}
+input[type=search]::search-cancel-button,
+input[type=search]::search-decoration {
+    appearance: none
+} 
 
 fieldset {
     padding: .35em .625em .75em;
@@ -317,8 +316,6 @@ th {
     font-style: normal;
     font-weight: 400;
     line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
 }
 
 .glyphicon-asterisk:before {
@@ -3171,10 +3168,6 @@ output {
     color: #999
 }
 
-.form-control::input-placeholder {
-    color: #999
-}
-
 .form-control[disabled],
 .form-control[readonly],
 fieldset[disabled] .form-control {
@@ -3192,7 +3185,7 @@ textarea.form-control {
 }
 
 input[type=search] {
-    -webkit-appearance: none
+    appearance: none
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -6402,164 +6395,6 @@ button.list-group-item {
     border-color: #337ab7
 }
 
-.list-group-item.active .list-group-item-heading,
-.list-group-item.active .list-group-item-heading>.small,
-.list-group-item.active .list-group-item-heading>small,
-.list-group-item.active:focus .list-group-item-heading,
-.list-group-item.active:focus .list-group-item-heading>.small,
-.list-group-item.active:focus .list-group-item-heading>small,
-.list-group-item.active:hover .list-group-item-heading,
-.list-group-item.active:hover .list-group-item-heading>.small,
-.list-group-item.active:hover .list-group-item-heading>small {
-    color: inherit
-}
-
-.list-group-item.active .list-group-item-text,
-.list-group-item.active:focus .list-group-item-text,
-.list-group-item.active:hover .list-group-item-text {
-    color: #c7ddef
-}
-
-.list-group-item-success {
-    color: #3c763d;
-    background-color: #dff0d8
-}
-
-a.list-group-item-success,
-button.list-group-item-success {
-    color: #3c763d
-}
-
-a.list-group-item-success .list-group-item-heading,
-button.list-group-item-success .list-group-item-heading {
-    color: inherit
-}
-
-a.list-group-item-success:focus,
-a.list-group-item-success:hover,
-button.list-group-item-success:focus,
-button.list-group-item-success:hover {
-    color: #3c763d;
-    background-color: #d0e9c6
-}
-
-a.list-group-item-success.active,
-a.list-group-item-success.active:focus,
-a.list-group-item-success.active:hover,
-button.list-group-item-success.active,
-button.list-group-item-success.active:focus,
-button.list-group-item-success.active:hover {
-    color: #fff;
-    background-color: #3c763d;
-    border-color: #3c763d
-}
-
-.list-group-item-info {
-    color: #31708f;
-    background-color: #d9edf7
-}
-
-a.list-group-item-info,
-button.list-group-item-info {
-    color: #31708f
-}
-
-a.list-group-item-info .list-group-item-heading,
-button.list-group-item-info .list-group-item-heading {
-    color: inherit
-}
-
-a.list-group-item-info:focus,
-a.list-group-item-info:hover,
-button.list-group-item-info:focus,
-button.list-group-item-info:hover {
-    color: #31708f;
-    background-color: #c4e3f3
-}
-
-a.list-group-item-info.active,
-a.list-group-item-info.active:focus,
-a.list-group-item-info.active:hover,
-button.list-group-item-info.active,
-button.list-group-item-info.active:focus,
-button.list-group-item-info.active:hover {
-    color: #fff;
-    background-color: #31708f;
-    border-color: #31708f
-}
-
-.list-group-item-warning {
-    color: #8a6d3b;
-    background-color: #fcf8e3
-}
-
-a.list-group-item-warning,
-button.list-group-item-warning {
-    color: #8a6d3b
-}
-
-a.list-group-item-warning .list-group-item-heading,
-button.list-group-item-warning .list-group-item-heading {
-    color: inherit
-}
-
-a.list-group-item-warning:focus,
-a.list-group-item-warning:hover,
-button.list-group-item-warning:focus,
-button.list-group-item-warning:hover {
-    color: #8a6d3b;
-    background-color: #faf2cc
-}
-
-a.list-group-item-warning.active,
-a.list-group-item-warning.active:focus,
-a.list-group-item-warning.active:hover,
-button.list-group-item-warning.active,
-button.list-group-item-warning.active:focus,
-button.list-group-item-warning.active:hover {
-    color: #fff;
-    background-color: #8a6d3b;
-    border-color: #8a6d3b
-}
-
-.list-group-item-danger {
-    color: #a94442;
-    background-color: #f2dede
-}
-
-a.list-group-item-danger,
-button.list-group-item-danger {
-    color: #a94442
-}
-
-a.list-group-item-danger .list-group-item-heading,
-button.list-group-item-danger .list-group-item-heading {
-    color: inherit
-}
-
-a.list-group-item-danger:focus,
-a.list-group-item-danger:hover,
-button.list-group-item-danger:focus,
-button.list-group-item-danger:hover {
-    color: #a94442;
-    background-color: #ebcccc
-}
-
-a.list-group-item-danger.active,
-a.list-group-item-danger.active:focus,
-a.list-group-item-danger.active:hover,
-button.list-group-item-danger.active,
-button.list-group-item-danger.active:focus,
-button.list-group-item-danger.active:hover {
-    color: #fff;
-    background-color: #a94442;
-    border-color: #a94442
-}
-
-.list-group-item-heading {
-    margin-top: 0;
-    margin-bottom: 5px
-}
 
 .list-group-item-text {
     margin-bottom: 0;
@@ -7055,7 +6890,7 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
-    -webkit-appearance: none;
+    appearance: none;
     padding: 0;
     cursor: pointer;
     background: 0 0;
