--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -164,12 +164,6 @@ html input[disabled] {
     cursor: default
 }
 
-button::focus-inner,
-input::focus-inner {
-    padding: 0;
-    border: 0
-}
-
 input {
     line-height: normal
 }
@@ -182,22 +176,11 @@ input[type=radio] {
     padding: 0
 }
 
-input[type=number]::inner-spin-button,
-input[type=number]::outer-spin-button {
-    height: auto
-}
-
 input[type=search] {
     box-sizing: content-box;
     box-sizing: content-box;
     box-sizing: content-box;
-    appearance: textfield
 }
-
-input[type=search]::search-cancel-button,
-input[type=search]::search-decoration {
-    appearance: none
-} 
 
 fieldset {
     padding: .35em .625em .75em;
@@ -1369,14 +1352,14 @@ th {
 
 * {
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     box-sizing: border-box
 }
 
 :after,
 :before {
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     box-sizing: border-box
 }
 
@@ -3092,7 +3075,7 @@ label {
 
 input[type=search] {
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     box-sizing: border-box
 }
 
@@ -3159,7 +3142,7 @@ output {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
 }
 
-.form-control::-moz-placeholder {
+.form-control::placeholder {
     color: #999;
     opacity: 1
 }
@@ -3660,7 +3643,7 @@ textarea.input-lg {
     touch-action: manipulation;
     cursor: pointer;
     user-select: none;
-    -moz-user-select: none;
+    user-select: none;
     -ms-user-select: none;
     user-select: none;
     background-image: none;
@@ -3671,7 +3654,7 @@ textarea.input-lg {
 .btn.active.focus,
 .btn.active:focus,
 .btn.focus,
-.btn:active.focus,
+.btn:active.focus, 
 .btn:active:focus,
 .btn:focus {
     outline: thin dotted;
