--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1365,7 +1365,6 @@ th {
 
 html {
     font-size: 10px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
 body {
@@ -3103,7 +3102,6 @@ input[type=file]:focus,
 input[type=checkbox]:focus,
 input[type=radio]:focus {
     outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px
 }
 
@@ -4133,15 +4131,6 @@ fieldset[disabled] .btn-danger:hover {
     border-radius: 0
 }
 
-.btn-link,
-.btn-link.active,
-.btn-link:active,
-.btn-link[disabled],
-fieldset[disabled] .btn-link {
-    background-color: transparent;
-    box-shadow: none;
-    box-shadow: none
-}
 
 .btn-link,
 .btn-link:active,
@@ -6364,7 +6353,6 @@ button.list-group-item {
     z-index: 2;
     color: #fff;
     background-color: #337ab7;
-    border-color: #337ab7
 }
 
 
@@ -6398,7 +6386,7 @@ button.list-group-item {
 }
 
 .panel-title {
-    margin-top: 0;
+    margin-top: 0; 
     margin-bottom: 0;
     font-size: 16px;
     color: inherit
@@ -6889,14 +6877,14 @@ button.close {
     transition: transform .3s ease-out;
     transition: transform .3s ease-out;
     transform: translate(0, -25%);
-    -ms-transform: translate(0, -25%);
+    transform: translate(0, -25%);
     transform: translate(0, -25%);
     transform: translate(0, -25%)
 }
 
 .modal.in .modal-dialog {
     transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
+    transform: translate(0, 0);
     transform: translate(0, 0);
     transform: translate(0, 0)
 }
@@ -7311,8 +7299,7 @@ button.close {
     line-height: 1
 }
 
-@media all and (transform-3d),
-(-webkit-transform-3d) {
+@media all{
     .carousel-inner>.item {
         -webkit-transition: -webkit-transform .6s ease-in-out;
         transition: transform .6s ease-in-out;
