--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3004,7 +3004,6 @@ table th[class*=col-] {
         width: 100%;
         margin-bottom: 15px;
         overflow-y: hidden;
-        -ms-overflow-style: -ms-autohiding-scrollbar;
         border: 1px solid #ddd
     }
     .table-responsive>.table {
@@ -3144,7 +3143,7 @@ output {
     opacity: 1
 }
 
-.form-control:-ms-input-placeholder {
+.form-control:input-placeholder {
     color: #999
 }
 
