--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4139,7 +4139,6 @@ fieldset[disabled] .btn-danger:hover {
 .btn-link:hover {
     color: #23527c;
     text-decoration: underline;
-    background-color: transparent
 }
 
 .btn-link[disabled]:focus,
@@ -5036,7 +5035,6 @@ textarea.input-group-sm>.input-group-btn>.btn {
     padding-right: 15px;
     padding-left: 15px;
     overflow-x: visible;
-    -webkit-overflow-scrolling: touch;
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1)
@@ -6224,7 +6222,6 @@ a.thumbnail:hover {
 .media,
 .media-body {
     overflow: hidden;
-    zoom: 1
 }
 
 .media-body {
@@ -6664,10 +6661,6 @@ button.list-group-item {
     border-color: #337ab7
 }
 
-.panel-primary>.panel-heading+.panel-collapse>.panel-body {
-    border-top-color: #337ab7
-}
-
 .panel-primary>.panel-heading .badge {
     color: #337ab7;
     background-color: #fff
@@ -6864,12 +6857,11 @@ button.close {
     z-index: 1050;
     display: none;
     overflow: hidden;
-    -webkit-overflow-scrolling: touch;
     outline: 0
 }
 
 .modal.fade .modal-dialog {
-    -webkit-transition: -webkit-transform .3s ease-out;
+    transition: transform .3s ease-out;
     transition: transform .3s ease-out;
     transition: transform .3s ease-out;
     transform: translate(0, -25%);
@@ -7614,9 +7606,6 @@ button.close {
     position: fixed
 }
 
-@-ms-viewport {
-    width: device-width
-}
 
 .visible-lg,
 .visible-md,
