--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -113,7 +113,7 @@
     animation: fa-spin 1s infinite steps(8)
 }
 
-@-webkit-keyframes fa-spin {
+@keyframes fa-spin {
     0% {
         transform: rotate(0deg)
     }
