--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -118,7 +118,7 @@
         transform: rotate(0deg)
     }
     100% {
-        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
         transform: rotate(359deg)
     }
 }
